--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -76,16 +76,16 @@
                             <legend class="border-bottom mb-4" style="font-size: 16px;">Log in to continue access to account</legend>
                             <div class="form-group">
                                 {{ form.username.label(class="form-control-label") }}
-                                {% if form.username.errors %}
-                                {{ form.username(class="form-control form-control-lg is-invalid") }}
-                                <div class="invalid-feedback">
-                                    {% for error in form.username.errors %}
-                                    <span>{{ error }}</span>
-                                    {% endfor %}
-                                </div>
-                                {% else %}
-                                {{ form.username(class="form-control form-control-lg") }}
-                                {% endif %}
+<!--                                {% if form.username.errors %}-->
+<!--                                {{ form.username(class="form-control form-control-lg is-invalid") }}-->
+<!--                                <div class="invalid-feedback">-->
+<!--                                    {% for error in form.username.errors %}-->
+<!--                                    <span>{{ error }}</span>-->
+<!--                                    {% endfor %}-->
+<!--                                </div>-->
+<!--                                {% else %}-->
+<!--                                {{ form.username(class="form-control form-control-lg") }}-->
+<!--                                {% endif %}-->
                             </div>
                             <br>
                             <div class="form-group">
