--- a/app/templates/results.html
+++ b/app/templates/results.html
@@ -23,7 +23,7 @@
                     <div class="row">
                         <div class="col-md-6">
                             <h3>Panel Capacity Required</h3>
-                            <p>{{Panel_capacity_needed}}</p>
+                            <p>{{panel_capacity_needed}}</p>
                         </div>
                         <div class="col-md-6">
                             <h3>Number of solar panel required</h3>
