--- a/app/templates/calculate.html
+++ b/app/templates/calculate.html
@@ -73,107 +73,109 @@
                 </div>
 
 
-    <div class="container">
-        <div class="row">
-                 <div class="col-md-12">
-                <div id="container" style="background:#fafcfe; padding: 20px; border-radius: 5px;">
-                    <div id="wrapper">
-                        <div id="form-container">
-                            <div class="img-form">
-                                <div id="wrapper" class="form-wrapper">
-                                    <div class="tab tab-1">
-                                        <table id="table" border="1">
-                                            <tr>
-                                                <th>Device</th>
-                                                <th>Quantity</th>
-                                                <th>Power</th>
-                                                <th>Hours of use</th>
-                                                <th>Total Watts-Hours per day</th>
-                                            </tr>
-                                        </table>
-                                    </div>
-                                    <div class="tab tab-2">
-                                        <h2>Fill in your Device details</h2>
-                                        Device Name :<input type="text" name="d" id="d">
-                                        Quantity :<input type="number" name="q" id="q">
-                                        Power :<input type="number" name="p" id="p">
-                                        Hours of use :<input type="number" name="h" id="h">
-
-                                        <button onclick="addHtmlTableRow();">Add</button>
-                                        <button onclick="editHtmlTbleSelectedRow();">Edit</button>
-                                        <button onclick="removeSelectedRow();">Remove</button>
-                                    </div>
-
-                                    <div class="table-responsive">
-                                        <table class='table' id="theTable"></table>
-
-                                </div>
-                                    <button id="totalButton" class="btn btn-primary login mt-3" onclick="totalPowerConsumption()">Show Your Total
-                                        Output</button>
-                                    <button class="btn btn-primary login mt-3"><a href="get_result" style="color:white">Get Result</a></button>
-                                    <div id="total"></div>
-                                    <br>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-            </div>
-
-            <div class="container">
-                    <div class="row my-5">
-                        <div class="col-md-2"></div>
-                        <div class="col-md-3">
-                            <div id="pad">
-                                <img src="{{ url_for('static', filename='img/lock.svg') }}" class='img-fluid' alt="">
-                            </div>
-                        </div>
-                        <div class="col-md-7 text-white">
-                            <div id='data'>
-                                <h2>Your data is safe with Us. <br>
-                                    We are 100% secure.</h2>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-            <footer style="background-color: #134373; color:#fafcfe; padding-top: 15px;">
                 <div class="container">
                     <div class="row">
-                        <div class="col-md-5">
-                            <img src="{{ url_for('static', filename='img/whitecalc.png') }}" alt="">
-                            <img src="{{ url_for('static', filename='img/elektor-white.png') }}" alt="">
-                            <div class="div">
-                                <p class='mt-3'> &copy; 2019. TeamCharites All rights reserved</p>
+                             <div class="col-md-12">
+                            <div id="container" style="background:#fafcfe; padding: 20px; border-radius: 5px;">
+                                <div id="wrapper">
+                                    <div id="form-container">
+                                        <div class="img-form">
+                                            <div id="wrapper" class="form-wrapper">
+                                                <div class="tab tab-2">
+                                                    <h2>Fill in your Device details</h2>
+                                                    Device/Application :<input type="text" name="d" id="d">
+                                                    Quantity (Nos):<input type="number" name="q" id="q">
+                                                    Power Consumption Rating (Watts) :<input type="number" name="p" id="p">
+                                                    Hours of use of Device Per Day (Hrs/day) :<input type="number" name="h" id="h" max="24">
+                                    
+                                                    <button onclick="addHtmlTableRow();">Add</button>
+                                                    <button onclick="editHtmlTbleSelectedRow();">Edit</button>
+                                                    <button onclick="removeSelectedRow();">Remove</button>
+                                                </div>
+                                                <br><br><br><br>
+                                                <div class="tab tab-1">
+                                                    <table id="table" border="1">
+                                                        <tr>
+                                                            <th>Device/Application</th>
+                                                            <th>Quantity (Nos)</th>
+                                                            <th>Power Consumption Rating (Watts)</th>
+                                                            <th>Hours of use of Device Per Day (Hrs/day)</th>
+                                                            <th>Total Watts-Hours per Day (WHrs/day)</th>
+                                                        </tr>
+                                                    </table>
+                                                </div>
+            
+                                                <div class="table-responsive">
+                                                    <table class='table' id="theTable"></table>
+            
+                                            </div>
+                                                <button id="totalButton" class="btn btn-primary login mt-3" onclick="totalPowerConsumption()">Show Your Total
+                                                    Output</button>
+                                                <button class="btn btn-primary login mt-3"><a href="get_result" style="color:white">Get Result</a></button>
+                                                <div id="total"></div>
+                                                <br>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
                             </div>
+            
                         </div>
-                        <div class="col-md-4">
-                            <h3 style="color: #e0dd1c;">About the App</h3>
-                            <p>Know how much power you have in your surrounding at different time
-                                intervals in order to
-                                plan for the safier, healthier and cost friendly future you and your family have always dreamt
-                                of.</p>
-                        </div>
-                        <div class="col-md-3">
-                            <h3 style="color: #e0dd1c;">Contact Us</h3>
-                            <address style="margin-bottom:30px;">
-                                Team Charites <br>
-                                3, Remote House,<br>
-                                HNG Avenue, Nigeria <br>
-                                +234-1111-0000 <br>
-                                info@charitesfinance.com
-                            </address>
-                        </div>
-                    </div>
-                </div>
-            </footer>
-
-
-            <script type="text/javascript" src="{{ url_for('static', filename='js/solar2.js') }}"></script>
-            <script src="{{ url_for('static', filename='js/jquery.js') }}"></script>
-            <script src="{{ url_for('static', filename='js/popper.min.js') }}"></script>
-            <script src="{{ url_for('static', filename='js/bootstrap.js') }}"></script>
+            
+                        <div class="container">
+                                <div class="row my-5">
+                                    <div class="col-md-2"></div>
+                                    <div class="col-md-3">
+                                        <div id="pad">
+                                            <img src="{{ url_for('static', filename='img/lock.svg') }}" class='img-fluid' alt="">
+                                        </div>
+                                    </div>
+                                    <div class="col-md-7 text-white">
+                                        <div id='data'>
+                                            <h2>Your data is safe with Us. <br>
+                                                We are 100% secure.</h2>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                    
+                        <footer style="background-color: #134373; color:#fafcfe; padding-top: 15px;">
+                            <div class="container">
+                                <div class="row">
+                                    <div class="col-md-5">
+                                        <img src="{{ url_for('static', filename='img/whitecalc.png') }}" alt="">
+                                        <img src="{{ url_for('static', filename='img/elektor-white.png') }}" alt="">
+                                        <div class="div">
+                                            <p class='mt-3'> &copy; 2019. TeamCharites All rights reserved</p>
+                                        </div>
+                                    </div>
+                                    <div class="col-md-4">
+                                        <h3 style="color: #e0dd1c;">About the App</h3>
+                                        <p>Know how much power you have in your surrounding at different time
+                                            intervals in order to
+                                            plan for the safier, healthier and cost friendly future you and your family have always dreamt
+                                            of.</p>
+                                    </div>
+                                    <div class="col-md-3">
+                                        <h3 style="color: #e0dd1c;">Contact Us</h3>
+                                        <address style="margin-bottom:30px;">
+                                            Team Charites <br>
+                                            3, Remote House,<br>
+                                            HNG Avenue, Nigeria <br>
+                                            +234-1111-0000 <br>
+                                            info@charitesfinance.com
+                                        </address>
+                                    </div>
+                                </div>
+                            </div>
+                        </footer>
+            
+            
+                        <script type="text/javascript" src="{{ url_for('static', filename='js/outputcalc.js') }}"></script>
+                        <script src="{{ url_for('static', filename='js/jquery.js') }}"></script>
+                        <script src="{{ url_for('static', filename='js/popper.min.js') }}"></script>
+                        <script src="{{ url_for('static', filename='js/bootstrap.js') }}"></script>
+            
 
 </body>
 
